--- a/App_QuanLiDuAn_Agile/App_QuanLiDuAn_Agile.csproj
+++ b/App_QuanLiDuAn_Agile/App_QuanLiDuAn_Agile.csproj
@@ -8,4 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+  </ItemGroup>
+
 </Project>
